# esc190_proj2_gifmaker

./: .gitignore  CMakeLists.txt  README.md  c_img.c  c_img.h  crop.c  gif_make.py  make_gif.py  png2bin.py  run.bat  run.sh  seamcarver.c  seamcarving.h
